# ask_the_video

./: .replit  README.md  app.py  document_processor  document_processor.py  engine.py  init_llm.py  main.py  pyproject.toml  setup_configs.py  test_text.txt  yt_transcripts.py
research/: gpt4all_test.ipynb  transcript_study.ipynb
